// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "<?OFX OFXHEADER="200" VERSION="211" SECURITY="NONE" OLDFILEUID="NONE" NEWFILEUID="NONE"?>": undefined,
  "CHARSET": "1252",
  "COMPRESSION": "NONE",
  "DATA": "OFXSGML",
  "ENCODING": "UTF-8",
  "NEWFILEUID": "NONE<?xml version="1.0" encoding="US-ASCII"?>",
  "OFX": {
    "BANKMSGSRSV1": {
      "STMTTRNRS": {
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
        "STMTRS": {
          "BANKACCTFROM": {
            "ACCTID": "1459950-11",
            "ACCTTYPE": "CHECKING",
            "BANKID": "364",
          },
          "BANKTRANLIST": {
            "DTEND": "2018-04-29",
            "DTSTART": "2018-01-30",
            "STRTTRN": [
              {
                "CHECKNUM": "000000061553574",
                "DTPOSTED": "2018-03-09",
                "FITID": "2018030607232002046000000061553574",
                "MEMO": "Repasse pagamento: 17223405 de XXXXXXXX",
                "REFNUM": "2002046000000017223405",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000061553576",
                "DTPOSTED": "2018-03-09",
                "FITID": "2018030607231001046000000061553576",
                "MEMO": "Tarifa repasse: 17223405 de XXXXXXXX",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000062976602",
                "DTPOSTED": "2018-03-20",
                "FITID": "2018031703312002046000000062976602",
                "MEMO": "Repasse pagamento: 22612776 de YYYYYYYYYYY",
                "REFNUM": "2002046000000022612776",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000062976603",
                "DTPOSTED": "2018-03-20",
                "FITID": "2018031703311001046000000062976603",
                "MEMO": "Tarifa repasse: 22612776 de YYYYYYYYYYY",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000063575983",
                "DTPOSTED": "2018-03-30",
                "FITID": "2018032704142002046000000063575983",
                "MEMO": "Repasse pagamento: 28015595 de Fulano Aguiar",
                "REFNUM": "2002046000000028015595",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000063575986",
                "DTPOSTED": "2018-03-30",
                "FITID": "2018032704141001046000000063575986",
                "MEMO": "Tarifa repasse: 28015595 de Fulano Aguiar",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000064109592",
                "DTPOSTED": "2018-04-06",
                "FITID": "2018040307262002046000000064109592",
                "MEMO": "Repasse pagamento: 28108174 de Ciclano da Silva",
                "REFNUM": "2002046000000028108174",
                "TRNAMT": "65.10",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000064109593",
                "DTPOSTED": "2018-04-06",
                "FITID": "2018040307261001046000000064109593",
                "MEMO": "Tarifa repasse: 28108174 de Ciclano da Silva",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065551500",
                "DTPOSTED": "2018-04-16",
                "FITID": "2018041303342002046000000065551500",
                "MEMO": "Repasse pagamento: 29384993 de ZZZZZZZZZZ",
                "REFNUM": "2002046000000029384993",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065551501",
                "DTPOSTED": "2018-04-16",
                "FITID": "2018041303341001046000000065551501",
                "MEMO": "Tarifa repasse: 29384993 de ZZZZZZZZZZ",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065642576",
                "DTPOSTED": "2018-04-17",
                "FITID": "2018041403362002046000000065642576",
                "MEMO": "Repasse pagamento: 29447637 de OOOOOOOOO",
                "REFNUM": "2002046000000029447637",
                "TRNAMT": "55.80",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065642577",
                "DTPOSTED": "2018-04-17",
                "FITID": "2018041403361001046000000065642577",
                "MEMO": "Tarifa repasse: 29447637 de OOOOOOOOO",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065694866",
                "DTPOSTED": "2018-04-28",
                "FITID": "2018041421312002047000000065694866",
                "MEMO": "Repasse pagamento: 29517140 de Beltrano Diniz",
                "REFNUM": "2002047000000029517140",
                "TRNAMT": "120.90",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065694867",
                "DTPOSTED": "2018-04-28",
                "FITID": "2018041421311001047000000065694867",
                "MEMO": "Tarifa repasse: 29517140 de Beltrano Diniz",
                "TRNAMT": "-7.23",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065696376",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018041517302002047000000065696376",
                "MEMO": "Repasse pagamento: 29533821 de HA",
                "REFNUM": "2002047000000029533821",
                "TRNAMT": "55.80",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065696377",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018041517301001047000000065696377",
                "MEMO": "Tarifa repasse: 29533821 de HA",
                "TRNAMT": "-3.49",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000066643667",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018042606102002046000000066643667",
                "MEMO": "Repasse pagamento: 30830691 de Duque",
                "REFNUM": "2002046000000030830691",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000066643670",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018042606101001046000000066643670",
                "MEMO": "Tarifa repasse: 30830691 de Duque",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
            ],
          },
          "CURDEF": "BRL",
          "LEDGERBAL": {
            "BALAMT": "635.50",
            "DTASOF": "2018-04-29",
          },
        },
        "TRNUID": "0",
      },
    },
    "CREDITCARDMSGSRSV1": {
      "CCSTMTTRNRS": {
        "CCSTMTRS": {
          "BANKTRANLIST": {
            "DTEND": "2005-08-31",
            "DTSTART": "2005-08-01",
            "STRTTRN": [
              {
                "DTPOSTED": "2005-08-11",
                "FITID": "219867",
                "NAME": "Interest Charge",
                "TRNAMT": "-23.00",
                "TRNTYPE": "INT",
              },
              {
                "DTPOSTED": "2005-08-11",
                "FITID": "219868",
                "NAME": "Payment - Thank You",
                "TRNAMT": "350.00",
                "TRNTYPE": "CREDIT",
              },
            ],
          },
          "CCACCTFROM": {
            "ACCTID": "123412341234",
          },
          "CURDEF": "USD",
          "LEDGERBAL": {
            "BALAMT": "-562.00",
            "DTASOF": "2005-08-31",
          },
        },
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
        "TRNUID": "0",
      },
    },
    "SIGNONMSGSRSV1": {
      "SONRS": {
        "DTSERVER": "2005-08-31",
        "LANGUAGE": "ENG",
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
      },
    },
  },
  "OFXHEADER": "100",
  "OLDFILEUID": "NONE",
  "SECURITY": "NONE",
  "VERSION": "102",
}
`;

exports[` 2`] = `
{
  "OFX": {
    "BANKMSGSRSV1": {
      "STMTTRNRS": {
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
        "STMTRS": {
          "BANKACCTFROM": {
            "ACCTID": "1459950-11",
            "ACCTTYPE": "CHECKING",
            "BANKID": "364",
          },
          "BANKTRANLIST": {
            "DTEND": "2018-04-29",
            "DTSTART": "2018-01-30",
            "STRTTRN": [
              {
                "CHECKNUM": "000000061553574",
                "DTPOSTED": "2018-03-09",
                "FITID": "2018030607232002046000000061553574",
                "MEMO": "Repasse pagamento: 17223405 de XXXXXXXX",
                "REFNUM": "2002046000000017223405",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000061553576",
                "DTPOSTED": "2018-03-09",
                "FITID": "2018030607231001046000000061553576",
                "MEMO": "Tarifa repasse: 17223405 de XXXXXXXX",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000062976602",
                "DTPOSTED": "2018-03-20",
                "FITID": "2018031703312002046000000062976602",
                "MEMO": "Repasse pagamento: 22612776 de YYYYYYYYYYY",
                "REFNUM": "2002046000000022612776",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000062976603",
                "DTPOSTED": "2018-03-20",
                "FITID": "2018031703311001046000000062976603",
                "MEMO": "Tarifa repasse: 22612776 de YYYYYYYYYYY",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000063575983",
                "DTPOSTED": "2018-03-30",
                "FITID": "2018032704142002046000000063575983",
                "MEMO": "Repasse pagamento: 28015595 de Fulano Aguiar",
                "REFNUM": "2002046000000028015595",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000063575986",
                "DTPOSTED": "2018-03-30",
                "FITID": "2018032704141001046000000063575986",
                "MEMO": "Tarifa repasse: 28015595 de Fulano Aguiar",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000064109592",
                "DTPOSTED": "2018-04-06",
                "FITID": "2018040307262002046000000064109592",
                "MEMO": "Repasse pagamento: 28108174 de Ciclano da Silva",
                "REFNUM": "2002046000000028108174",
                "TRNAMT": "65.10",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000064109593",
                "DTPOSTED": "2018-04-06",
                "FITID": "2018040307261001046000000064109593",
                "MEMO": "Tarifa repasse: 28108174 de Ciclano da Silva",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065551500",
                "DTPOSTED": "2018-04-16",
                "FITID": "2018041303342002046000000065551500",
                "MEMO": "Repasse pagamento: 29384993 de ZZZZZZZZZZ",
                "REFNUM": "2002046000000029384993",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065551501",
                "DTPOSTED": "2018-04-16",
                "FITID": "2018041303341001046000000065551501",
                "MEMO": "Tarifa repasse: 29384993 de ZZZZZZZZZZ",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065642576",
                "DTPOSTED": "2018-04-17",
                "FITID": "2018041403362002046000000065642576",
                "MEMO": "Repasse pagamento: 29447637 de OOOOOOOOO",
                "REFNUM": "2002046000000029447637",
                "TRNAMT": "55.80",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065642577",
                "DTPOSTED": "2018-04-17",
                "FITID": "2018041403361001046000000065642577",
                "MEMO": "Tarifa repasse: 29447637 de OOOOOOOOO",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065694866",
                "DTPOSTED": "2018-04-28",
                "FITID": "2018041421312002047000000065694866",
                "MEMO": "Repasse pagamento: 29517140 de Beltrano Diniz",
                "REFNUM": "2002047000000029517140",
                "TRNAMT": "120.90",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065694867",
                "DTPOSTED": "2018-04-28",
                "FITID": "2018041421311001047000000065694867",
                "MEMO": "Tarifa repasse: 29517140 de Beltrano Diniz",
                "TRNAMT": "-7.23",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000065696376",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018041517302002047000000065696376",
                "MEMO": "Repasse pagamento: 29533821 de HA",
                "REFNUM": "2002047000000029533821",
                "TRNAMT": "55.80",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000065696377",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018041517301001047000000065696377",
                "MEMO": "Tarifa repasse: 29533821 de HA",
                "TRNAMT": "-3.49",
                "TRNTYPE": "DEBIT",
              },
              {
                "CHECKNUM": "000000066643667",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018042606102002046000000066643667",
                "MEMO": "Repasse pagamento: 30830691 de Duque",
                "REFNUM": "2002046000000030830691",
                "TRNAMT": "74.40",
                "TRNTYPE": "CREDIT",
              },
              {
                "CHECKNUM": "000000066643670",
                "DTPOSTED": "2018-04-29",
                "FITID": "2018042606101001046000000066643670",
                "MEMO": "Tarifa repasse: 30830691 de Duque",
                "TRNAMT": "-3.34",
                "TRNTYPE": "DEBIT",
              },
            ],
          },
          "CURDEF": "BRL",
          "LEDGERBAL": {
            "BALAMT": "635.50",
            "DTASOF": "2018-04-29",
          },
        },
        "TRNUID": "0",
      },
    },
    "CREDITCARDMSGSRSV1": {
      "CCSTMTTRNRS": {
        "CCSTMTRS": {
          "BANKTRANLIST": {
            "DTEND": "2005-08-31",
            "DTSTART": "2005-08-01",
            "STRTTRN": [
              {
                "DTPOSTED": "2005-08-11",
                "FITID": "219867",
                "NAME": "Interest Charge",
                "TRNAMT": "-23.00",
                "TRNTYPE": "INT",
              },
              {
                "DTPOSTED": "2005-08-11",
                "FITID": "219868",
                "NAME": "Payment - Thank You",
                "TRNAMT": "350.00",
                "TRNTYPE": "CREDIT",
              },
            ],
          },
          "CCACCTFROM": {
            "ACCTID": "123412341234",
          },
          "CURDEF": "USD",
          "LEDGERBAL": {
            "BALAMT": "-562.00",
            "DTASOF": "2005-08-31",
          },
        },
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
        "TRNUID": "0",
      },
    },
    "SIGNONMSGSRSV1": {
      "SONRS": {
        "DTSERVER": "2005-08-31",
        "LANGUAGE": "ENG",
        "STATUS": {
          "CODE": "0",
          "SEVERITY": "INFO",
        },
      },
    },
  },
}
`;
